--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "@types/webpack-env": "^1.16.2",
     "node-sass": "npm:dart-sass@1.25.0",
     "svg-sprite-loader": "^6.0.9",
-    "svgo-loader": "^3.0.0"
+    "svgo-loader": "2.2.1"
   },
   "jest": {
     "roots": [
