--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "money-react",
   "version": "0.1.0",
+  "homepage": "https://ymingf.github.io/money-react-website/",
   "private": true,
   "dependencies": {
     "@babel/core": "7.12.3",
@@ -40,7 +41,9 @@
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
+    "global": "^4.4.0",
     "html-webpack-plugin": "4.5.0",
+    "http-server": "^13.0.2",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
     "jest-circus": "26.6.0",
